<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.muffinworks.knittingapp.MainActivity">

    <item
        android:id="@+id/export_pattern"
        android:orderInCategory="100"
        android:title="@string/menu_export_pattern"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/open_glossary"
        android:orderInCategory="100"
        android:title="@string/menu_open_glossary"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/reset_row_counter"
        android:orderInCategory="100"
        android:title="@string/menu_reset_counter"
        app:showAsAction="never" />

    <item
        android:id="@+id/open_editor"
        android:orderInCategory="100"
        android:title="@string/menu_open_editor"
        app:showAsAction="never" />

    <item
        android:id="@+id/scroll_current_row_to_center"
        android:orderInCategory="100"
        android:title="@string/menu_jump_to_current_row"
        app:showAsAction="always" />

    <item
        android:id="@+id/switch_view_style"
        android:orderInCategory="100"
        android:title="@string/menu_switch_editor"
        app:showAsAction="always" />
</menu>
